# enterprise-chathoot-migration

./: .copilot-rules-enterprise-chathoot-migration.md  .copilot-rules-enterprise-chatwoot-migration.md  .gitignore  .scaffold-state.yaml  04_debug_dedup.py  06_verificar_erros.py  Makefile  README.md  SECURITY.md  main.py  objetivo-init.yaml  objetivo.yaml  pyproject.toml
.git-hooks/: pre-commit.secrets
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
.github/agents/: chatwoot-expert.agent.md  dba-sql-expert.agent.md  devops-expert.agent.md  python-expert.agent.md  (+1 more)
.specify/: feature.json  init-options.json  integration.json
app/: 00_inspecionar.py  01_migrar_account.py  02_verificar.py  03_diagnostico_overlap.py  05_diagnostico_completo.py  07_diagnostico_attachment_display_id.py  08_diagnostico_perda_dados.py  09_importar_tbchat.py  10_validar_api.py  11_validar_hash.py  12_diagnostico_marcos.py  13_migrar_inbox_members.py  14_verificar_conv_marcos.py  15_diagnostico_inbox125.py  16_diagnostico_visibilidade_marcus.py  db.py  migrate_all_accounts.py
docker/: Dockerfile  deploy-to-wfdb01.sh  docker-compose.yml  entrypoint.sh  requirements.txt
docs/: INDEX.md  P-O-C-constitution.md  PIPELINE-MIGRAÇÃO-DADOS.TXT  PROJECT_CREATION_SUMMARY.md  TODAY_ACTIVITIES.md  TODO.md  vya-chat-dev-env.txt
scripts/: check_chatwoot_versions.py  cleanup-tmp.sh  git-commit-with-file.sh  start-migration-bg.sh
src/: __init__.py  migrar.py
test/: conftest.py
tmp/: diagnostico_20260410_165108.txt  diagnostico_20260410_165234.txt  diagnostico_20260410_165333.txt
(+173 files in other folders)
