[project]
name = "enterprise-chathoot-migration"
version = "0.1.0"
description = "Incremental idempotent migration from chatwoot_dev_db to chatwoot004_dev_db"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy==2.0.49",
    "psycopg2-binary==2.9.11",
    "alembic==1.18.4",
]

[project.optional-dependencies]
dev = [
    "ruff==0.15.10",
    "black==26.3.1",
    "pytest==9.0.3",
    "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["test"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=90"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "D"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.per-file-ignores]
"test/**" = ["D"]

[tool.black]
target-version = ["py312"]
line-length = 100

[tool.coverage.run]
omit = ["src/migrar.py"]
